# DBT_monthly_utilization_metrics

./: .gitignore  README.md  after_thought.md  pyproject.toml  star_schema_desc.md  tech_documentation.md
data_mart/: dbt_project.yml  package-lock.yml  packages.yml  profiles.yml  testing.md
data_mart/models/curated/: org_util_rate.sql  provincial_util_rate.sql
data_mart/models/dimensions/: member_dim.sql  organization_dim.sql
data_mart/models/example/: schema.yml
data_mart/models/facts/: episode_fact.sql
data_mart/models/initial_run/: hist_events.sql  hist_members.sql  hist_organizations.sql  processed_events.sql  processed_members.sql  processed_organizations.sql
data_mart/models/staging/: stg_events.sql  stg_members.sql  stg_organizations.sql
data_mart/snapshots/: snap_events.sql  snap_members.sql  snap_organizations.sql
data_mart/tests/: processing_test.yml
