[tool.poetry]
name = "data-analytics-modelling-challenge"
version = "0.1.0"
description = "Data Analytics Modelling challenge for Dialogue Health Technologies, Inc."
authors = ["Griff George <griff.george@dialogue.co>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
dbt-core = "^1.9.4"
dbt-duckdb = "^1.9.3"
duckcli = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
